fixed images to make them responsive on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -76,11 +76,19 @@ img {
 
 /* Header */
 .hero {
-  background: url("../images/home/showcase.jpg");
-  background-position: 50% 50%;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)),
+    url(../images/home/showcase.jpg) no-repeat center center / cover;
+  background-position: 50% 30%;
   height: 100vh;
   position: relative;
-  color: #fff;
+  h1 {
+    color: #fff;
+    word-spacing: 5px;
+    letter-spacing: 1px;
+  }
+  p {
+    color: white;
+  }
 }
 
 .hero .content {
@@ -105,7 +113,7 @@ img {
 
 .fa-gear {
   font-size: 23px !important;
-  color: rgb(249, 210, 69);
+  color: #878788;
 }
 
 .hero::before {
@@ -124,7 +132,7 @@ img {
 
 .hero.blog {
   background: url("../images/home/blog.jpg") no-repeat center center/cover;
-  height: 30vh;
+  height: 20vh;
 }
 
 /* Icons */
@@ -138,11 +146,24 @@ img {
 }
 
 .icons i {
-  background-color: #fd3f3f;
+  background-color: #4a4a4a;
   color: #fff;
   padding: 1rem;
   border-radius: 50%;
   margin-bottom: 15px;
+}
+
+/*SECTION COLORS*/
+
+#about {
+  background: rgb(222, 222, 222);
+}
+
+#cases {
+  background: rgb(222, 222, 222);
+}
+#team {
+  background: rgb(222, 222, 222);
 }
 
 .cases img:hover {
@@ -274,8 +295,12 @@ img {
     width: 70%;
   }
   .hero {
-    background: url("../images/home/showcase2.jpg") no-repeat center
-      center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6)),
+      url(../images/home/showcase2.jpg) no-repeat center center / cover;
+    background-position: 20% 90%;
+    p {
+      font-size: 14px !important;
+    }
   }
 }
 
