--- a/css/utilities.css
+++ b/css/utilities.css
@@ -12,11 +12,11 @@
 .btn {
   cursor: pointer;
   display: inline-block;
-  padding: 7px 60px;
+  padding: 9px 75px;
   color: #fff;
-  background-color: #fd3f3f;
-  border: solid 1px #fd3f3f;
-  border-radius: 5px;
+  background-color: #0a090969;
+  border: dotted 1px #fd3f3f;
+  border-radius: 2px;
 }
 
 .btn:hover {
@@ -28,7 +28,7 @@
 .btn-primary,
 .bg-primary {
   background: #fd3f3f;
-  color: #fff;
+  color: #ffffff;
   padding: 7px 60px;
 }
 .btn-secondary,
@@ -101,7 +101,7 @@
 .flex-columns img {
   width: 100%;
   height: 100%;
-  object-fit: fill;
+  object-fit: inherit;
 }
 
 .flex-columns .column-2 {
